fixed font visibility for login screen

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -2,7 +2,7 @@
 
 body {
   background-color: #fff;
-  color: teal;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2em;
   line-height: 18px;
